# serialport-api-mgr

./: .gitignore  CLAUDE.md  README.md  REFACTORING_PLAN.md  codecov.yml  commitlint.config.js  eslint.config.js  index.html  index.tsx  metadata.json  package.json  playwright.config.ts  pnpm-lock.yaml  renovate.json  rust-backend-conventions.md  tailwind.config.ts  tsconfig.json  types.ts  vite-env.d.ts  vite.config.ts  vitest.config.ts
.github/workflows/: build.yml  release.yml  security.yml  test.yml
claude/: SEMANTIC_PORT_NAMES.md  TAURI_COMMAND_REFACTORING.md
e2e/: app.spec.ts  command-protocol.spec.ts  tauri-mocks.ts
esp32-test-device/: .gitignore  Cargo.toml  README.md  sdkconfig.defaults
esp32-test-device/.cargo/: config.toml
esp32-test-device/src/: commands.rs  http.rs  main.rs  serial.rs  types.rs  wifi.rs
esp32-test-device/src/protocols/: at.rs  elm327.rs  escpos.rs  marlin.rs  mod.rs  modbus.rs  nmea.rs  scpi.rs
pencil/: ui.pen
src/: App.tsx  index.css  index.tsx  main.tsx  types.ts
src-tauri/: Cargo.toml  RUST_STANDARDS.md  tauri.conf.json
src-tauri/.cargo/: audit.toml
src-tauri/capabilities/: default.json
src-tauri/src/: bridge.rs  constants.rs  error.rs  lib.rs  main.rs  state.rs  util.rs
src-tauri/src/error/: mod.rs
src-tauri/src/events/: message_read.rs  mod.rs  port_closed.rs  port_opened.rs
src-tauri/src/serial/: data_bits.rs  flow_control.rs  mod.rs  parity.rs  port_type.rs  stop_bits.rs  usb_port_info.rs
src-tauri/src/serial_mgr/: close_port.rs  execute_saved_command.rs  helpers.rs  log.rs  mod.rs  open_port.rs  port_task.rs  serial_events.rs  types.rs  update_ports.rs  write_port.rs
src-tauri/src/serial_mgr/storage/: entity.rs  mod.rs
src-tauri/src/util/: mod.rs
src/bridge/: call_rust.ts  logging.ts  rust_events.ts  types.ts
src/components/: AIAssistant.tsx  AICommandGeneratorModal.tsx  AppSettingsModal.tsx  AttachmentManager.tsx  CommandFormModal.tsx  CommandList.tsx  CommandViews.tsx  ConfirmationModal.tsx  ConsoleViewer.tsx  ControlPanel.tsx  DeviceFormModal.tsx  DeviceList.tsx  ErrorFallback.tsx  InputPanel.tsx  ParameterInputModal.tsx  PresetFormModal.tsx  ProtocolViews.tsx  QuickSaveCommandModal.tsx  RightSidebar.tsx  SequenceFormModal.tsx  SequenceViews.tsx  SettingsModal.tsx  Sidebar.tsx  SimpleInputModal.tsx  SystemLogViewer.tsx  ThemeProvider.tsx  navibar.tsx
src/hooks/: useChartZoomPan.ts  useCommandExecution.ts  useCopyFeedback.ts  useDeviceProtocolSync.ts  useEChart.ts  useFilteredItems.ts  useFormTabs.ts  useFraming.ts  useGroupedItems.ts  usePresetOperations.ts  useProfileImportExport.ts  useProjectState.ts  useProtocolFraming.ts  useProtocolSync.ts  useSerialConnection.ts  useTheme.ts  useThrottle.ts  useValidation.ts  use_avaliable_ports.ts
src/layout/: root.tsx
src/lib/: apiKeyEncryption.ts  attachmentUtils.ts  commandBuilder.ts  connection.ts  constants.ts  crypto.ts  dataUtils.ts  defaults.ts  framing.ts  i18n.ts  icons.ts  messageBuilder.ts  messageParser.ts  mockPort.ts  parameterUtils.ts  plotterParser.ts  portUtils.ts  protocolIntegration.ts  protocolSchemas.ts  protocolTypes.ts  sandboxedScripting.ts  schemas.ts  scriptAnalyzer.ts  scripting.ts  selectors.ts  serialService.ts  store.ts  storeSchemas.ts  tauriEnv.ts  themeContext.ts  utils.ts  webSerialConfig.ts
src/pages/: CommandEditorPage.tsx  CommandLibrary.tsx  DeviceEditorPage.tsx  DeviceLibrary.tsx  MainWorkspace.tsx  ProtocolEditor.tsx  ProtocolLibrary.tsx  SequenceEditor.tsx  SequenceLibrary.tsx  config_mgr.tsx  config_mgr_page.tsx  device_tester_page.tsx  serial_port_monitor.tsx  serial_port_monitor_page.tsx  serialport_application_page.tsx  serialport_logs.tsx
src/routes/: index.tsx
(+277 files in other folders)
