[package]
name = "serial-protocol-tester"
version = "0.1.0"
authors = ["Serial API Manager Test Device"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "serial-protocol-tester"
harness = false

[profile.release]
opt-level = "s"

[profile.dev]
debug = true
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
embassy = [
    "esp-idf-svc/embassy-sync",
    "esp-idf-svc/critical-section",
    "esp-idf-svc/embassy-time-driver",
]

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.50", default-features = false }
embedded-svc = "0.28"
embedded-io = "0.6"
heapless = "0.8"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
anyhow = "1.0"

[build-dependencies]
embuild = { version = "0.32", features = ["espidf"] }
