[package]
name = "serialport-api"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "serialport_api_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "^2.0.0", features = [] }

[dependencies]
tauri = { version = "^2.9.5", features = [] }
tauri-plugin-shell = "^2.3.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.146"


lazy_static = "1.5.0"
async-std = "1.13.2"

tauri-plugin-log = "^2.7.1"
# tauri-plugin-devtools = "2.0.0-rc"
tauri-plugin-fs = "^2.4.4"
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = { version = "0.7.17", features = ["full"] }
tokio-serial = { version = "5.4.5" }
tokio-stream = {version = "0.1.17", features = ["sync"] }
rootcause = { version = "0.11.0" }
tracing = { version = "0.1.44" }
time = { version = "0.3.44", features = ["macros"] }
tracing-subscriber = { version = "0.3.22", features = [
    "time",
    "local-time",
    "fmt",
    "std",
    "json",
    "env-filter",
] }
# nutype = "0.5.0"
