[package]
name = "serialport-api"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "serialport_api_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "^2.0.0", features = [] }

[dependencies]
tauri = { version = "^2.9.5", features = [] }
tauri-plugin-shell = "^2.3.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"


tauri-plugin-log = "^2.8.0"
# tauri-plugin-devtools = "2.0.0-rc"
tauri-plugin-fs = "^2.4.5"
tauri-plugin-store = "2.4.2"
tokio = { version = "1.49.0", features = ["full"] }
tokio-util = { version = "0.7.18", features = ["full"] }
tokio-serial = { version = "5.4.5" }
tokio-stream = {version = "0.1.18", features = ["sync"] }
rootcause = { version = "0.11.1" }
tracing = { version = "0.1.44" }
time = { version = "0.3.44", features = ["macros"] }
tracing-appender = { version = "0.2.4" }
tracing-subscriber = { version = "0.3.22", features = [
    "time",
    "local-time",
    "fmt",
    "std",
    "json",
    "env-filter",
] }
# nutype = "0.5.0"

sea-orm = { version = "1.1", features = ["runtime-tokio-rustls", "sqlx-sqlite"] }
uuid = { version = "1.11", features = ["v4"] }
hex = "0.4"
thiserror = "1.0"
anyhow = "1.0"
